--- a/helper_scripts/pyproject.toml
+++ b/helper_scripts/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "click>=8.2.0",
     "pytest>=8.3.5",
+    "pytest-mock>=3.14.1",
     "requests>=2.32.3",
 ]
 
